force-app/main/default/objects/Quiz_Answer__c/Quiz_Answer__c.object-meta.xml
<CustomObject>
    <label>Quiz_Answer</label>
    <nameField>
        <displayFormat>Ans-{000000}</displayFormat>
        <label>Quiz_Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz_Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>