force-app/main/default/objects/Quiz_Answer__c/fields/isTrue__c.field-meta.xml
<CustomField>
    <fullName>isTrue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTrue</label>
    <type>Checkbox</type>
</CustomField>