force-app/main/default/objects/Quiz_Answer__c/fields/Quiz_Question__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz_Question</label>
    <referenceTo>Quiz_Question__c</referenceTo>
    <relationshipLabel>Quiz_Answers</relationshipLabel>
    <relationshipName>Quiz_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>