force-app/main/default/objects/Quiz_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isTrue__c</columns>
    <columns>Quiz_Question__c</columns>
    <columns>Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>